examples/test/testpolicy16629.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16629
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key42: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value45
          key9: value26
          key16: value10
      podSelector:
        matchLabels:
          key28: value4
          key26: value23
          key30: value31
